# Accelerated-TinyMPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  python_wrapper_for_gym.py  python_wrapper_for_tracking.py
examples/: CMakeLists.txt  example_quadrotor_hovering.cpp  example_quadrotor_hovering_rose.cpp  example_quadrotor_hovering_rvv.cpp  example_quadrotor_hovering_single.cpp  example_quadrotor_tracking.cpp  example_quadrotor_tracking_circle.cpp  example_quadrotor_tracking_perf_rvv.cpp  example_quadrotor_tracking_pybullet.cpp  example_quadrotor_tracking_rose.cpp  example_quadrotor_tracking_rvv.cpp  example_quadrotor_tracking_y_axis_line.cpp  glob_opts.hpp  matlib_perf_rvv.cpp
examples/problem_data/: quadrotor_100hz_params.hpp  quadrotor_20hz_params.hpp  quadrotor_50hz_params.hpp  quadrotor_50hz_params_constrained.hpp  quadrotor_50hz_params_unconstrained.hpp
examples/trajectory_data/: quadrotor_100hz_ref_hover.hpp  quadrotor_20hz_ref_hover.hpp  quadrotor_20hz_y_axis_line.hpp
include/Gemmini/: gemmini.h  gemmini_params.h  gemmini_robotics.h  gemmini_spad.h
include/RoSE/: rose.h
include/matlib/: common.h  matlib.h  matlib_cpu.h  matlib_gemmini.h  matlib_golden.h  matlib_rva.h  matlib_rvv.h
include/rvv_matlib/: common.h  rvv_matlib.h
include/tinympc/: admm.hpp  admm_cpu.hpp  admm_eigen.hpp  admm_rvv.hpp  types.hpp  types_rvv.hpp
src/: CMakeLists.txt
src/matlib/: common.cpp  matlib_rvv.cpp
src/rvv_matlib/: common.cpp  rvv_matlib.cpp
src/tinympc/: CMakeLists.txt  admm.cpp  admm.hpp  admm_cpu.cpp  admm_eigen.cpp  admm_gemmini.cpp  admm_rvv.cpp  types.hpp
test/: CMakeLists.txt  test_admm_eigen.cpp  test_admm_rvv  test_gemmini.cpp  test_matlib_rvv
test/matlib/: test_matlib_rvv.cpp
test/rvv_matlib/: test_rvv_matlib.cpp
test/tinympc/: test_admm_cpu.cpp  test_admm_eigen.cpp  test_admm_rvv.cpp  test_admm_rvv.py
