if(USE_CPU)
    add_executable(example_quadrotor_hovering example_quadrotor_hovering.cpp)
    target_link_libraries(example_quadrotor_hovering LINK_PUBLIC tinympc)
    add_executable(example_quadrotor_tracking example_quadrotor_tracking.cpp)
    target_link_libraries(example_quadrotor_tracking LINK_PUBLIC tinympc)
endif(USE_CPU)
if(USE_RVV)
    add_executable(example_quadrotor_hovering_rvv example_quadrotor_hovering_rvv.cpp)
    target_link_libraries(example_quadrotor_hovering_rvv LINK_PUBLIC tinympc matlib)
    add_executable(example_quadrotor_tracking_rvv example_quadrotor_tracking_rvv.cpp)
    target_link_libraries(example_quadrotor_tracking_rvv LINK_PUBLIC tinympc matlib)
endif(USE_RVV)

# add_executable(example_quadrotor_hovering_rose example_quadrotor_hovering_rose.cpp)
# target_link_libraries(example_quadrotor_hovering_rose LINK_PUBLIC tinympc matlib)
