if(USE_GEMMINI)
    add_executable(example_quadrotor_hovering_gemmini example_quadrotor_hovering_rvv.cpp)
    target_link_libraries(example_quadrotor_hovering_gemmini LINK_PUBLIC tinympc matlib)
    add_executable(example_quadrotor_tracking_gemmini example_quadrotor_tracking_rvv.cpp)
    target_link_libraries(example_quadrotor_tracking_gemmini LINK_PUBLIC tinympc matlib)
endif(USE_GEMMINI)

if(USE_RVV)
    add_executable(example_quadrotor_hovering_rvv example_quadrotor_hovering_rvv.cpp)
    target_link_libraries(example_quadrotor_hovering_rvv LINK_PUBLIC tinympc matlib)
    add_executable(example_quadrotor_tracking_rvv example_quadrotor_tracking_rvv.cpp)
    target_link_libraries(example_quadrotor_tracking_rvv LINK_PUBLIC tinympc matlib)
endif(USE_RVV)

if(USE_CPU)
    add_executable(example_quadrotor_hovering_cpu example_quadrotor_hovering_rvv.cpp)
    target_link_libraries(example_quadrotor_hovering_cpu LINK_PUBLIC tinympc matlib)
    add_executable(example_quadrotor_tracking_cpu example_quadrotor_tracking_rvv.cpp)
    target_link_libraries(example_quadrotor_tracking_cpu LINK_PUBLIC tinympc matlib)
endif(USE_CPU)

# add_executable(example_quadrotor_hovering_rose example_quadrotor_hovering_rose.cpp)
# target_link_libraries(example_quadrotor_hovering_rose LINK_PUBLIC tinympc matlib)
